[tool.poetry]
name = "aoc"
version = "0.1.0"
description = "Advent of Code 2023 solutions"
authors = ["Joshua T <joshua@sonofone.net>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
black = "^23.12.0"
hypothesis = "^6.92.0"
mypy = "^1.7.1"
pylint = "^3.0.3"
pytest = "^7.4.3"
ruff = "^0.1.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
